<resources>
    <string name="app_name">Student Details</string>
    <string name="name">Name:</string>
    <string name="rollno">Roll No:</string>
    <string name="mark">Mark</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="view">View</string>
    <string name="viewall">View All</string>


</resources>
