<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/rollno"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/editRollno"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/editName"/>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/mark"/>
  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text"
      android:id="@+id/editMarks"/>
  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/add"
      android:id="@+id/btnAdd"/>
  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/delete"
      android:id="@+id/btnDelete"/>
  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/modify"
      android:id="@+id/btnModify"/>
  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/view"
      android:id="@+id/btnView"/>
  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/viewall"
      android:id="@+id/btnViewAll"/>









</LinearLayout>